# ffiii-importer

./: .gitignore  arancio.py  carta_arancio.py  config-template.json  conto_arancio.py  conto_credit.py  conto_intesa.py  ffapi.py  htmltable.py  paypal.py  pyproject.toml  requirements.txt
ffiii_importer/: carta_arancio.py  conto_arancio.py  conto_credit.py  conto_intesa.py  ffapi.py  htmltable.py  models.py  paypal.py
ffiii_importer/firefly_iii_client/: __init__.py
ffiii_importer/firefly_iii_client/api/accounts/: get_account.py
ffiii_importer/firefly_iii_client/api/rules/: list_rule.py
ffiii_importer/firefly_iii_client/api/transactions/: store_transaction.py
ffiii_importer/firefly_iii_client/models/: __init__.py  account_array.py  account_properties.py  account_read.py  account_role_property_type_1.py  account_role_property_type_2_type_1.py  account_role_property_type_3_type_1.py  account_search_field_filter.py  account_single.py  account_type_filter.py  account_type_property.py  array_entry_with_currency_and_sum.py  bad_request_response.py  basic_summary.py  basic_summary_entry.py  category_array.py  category_properties.py  category_read.py  category_single.py  category_store.py  category_update.py  credit_card_type_property_type_1.py  credit_card_type_property_type_2_type_1.py  credit_card_type_property_type_3_type_1.py  interest_period_property_type_1.py  interest_period_property_type_2_type_1.py  interest_period_property_type_3_type_1.py  internal_exception_response.py  liability_direction_property_type_1.py  liability_direction_property_type_2_type_1.py  liability_direction_property_type_3_type_1.py  liability_type_property_type_1.py  liability_type_property_type_2_type_1.py  liability_type_property_type_3_type_1.py  link_type.py  link_type_array.py  link_type_read.py  link_type_single.py  link_type_update.py  meta.py  (+26 more)
