[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "ffiii-importer"
version = "0.2.0"
description = "Import banks files to FireFly"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.23,<0.29",
    "openpyxl>=3.0.5,<4",
    "pydantic>=2.12.5",
]

[tool.ruff]
line-length = 100
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PLE", # pylint errors
    "PLW", # pylint warnings
]

[tool.pyproject-fmt]
column_width = 100
indent = 4

[tool.datamodel-codegen]
input-file-type = "openapi"
output = "ffiii_importer/models.py"
output-model-type = "pydantic_v2.BaseModel"
target-python-version = "3.12"
formatters = [ "isort", "ruff-format" ]
capitalize-enum-members = true
use-operation-id-as-name = true
type-mappings = ["string+iban=string", "amount=number"]